initial commit for this fork

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,48 @@
+#################
+## Build Files
+#################
+
+MapTour/cake
+MapTour/cake.cmd
+MapTour/cleancss
+MapTour/cleancss.cmd
+MapTour/coffee
+MapTour/coffee.cmd
+MapTour/esparse
+MapTour/esparse.cmd
+MapTour/esvalidate
+MapTour/esvalidate.cmd
+MapTour/grunt
+MapTour/grunt-regex-replace
+MapTour/grunt-regex-replace.cmd
+MapTour/grunt.cmd
+MapTour/js-yaml
+MapTour/js-yaml.cmd
+MapTour/jshint
+MapTour/jshint.cmd
+MapTour/nopt
+MapTour/nopt.cmd
+MapTour/r.js
+MapTour/r.js.cmd
+MapTour/rimraf
+MapTour/rimraf.cmd
+MapTour/shjs
+MapTour/shjs.cmd
+MapTour/tiny-lr
+MapTour/tiny-lr.cmd
+MapTour/uglifyjs
+MapTour/uglifyjs.cmd
+MapTour/which
+MapTour/which.cmd
+
+#################
+## misc
+#################
+
+grepresult
+
+#################
+
 MapTour/deploy/*
 MapTour/node_modules/
 
